Added Instrumentation and unit test cases.