@@ -17,7 +17,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.shacklehotelbuddy.HiltTestRunner"
+
         vectorDrawables {
             useSupportLibrary true
         }
@@ -53,9 +54,42 @@ android {
         kotlinCompilerExtensionVersion '1.3.2'
     }
     packagingOptions {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/LICENSE.md'
+        exclude 'META-INF/LICENSE-notice.md'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/*.kotlin_module'
+    }
+    /**
+     * sharedTest directory act as bridge between unit and instrumentation tests.
+     */
+    sourceSets {
+        androidTest {
+            java.srcDirs += "src/sharedTest/java"
         }
+        test {
+            java.srcDirs += "src/sharedTest/java"
+        }
+    }
+
+    // Always show the result of every unit test when running via command line, even if it passes.
+    testOptions.unitTests {
+        includeAndroidResources true
+        returnDefaultValues true
+    }
+
+    tasks.withType(Test) {
+        testLogging {
+            events "skipped", "failed", "passed"
+        }
+        jvmArgs = ['-noverify','--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED']
     }
 }
 
@@ -69,6 +103,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Compose dependencies
     implementation 'androidx.navigation:navigation-compose:2.6.0'
@@ -76,6 +111,7 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:2.5.2"
+    implementation 'androidx.navigation:navigation-testing:2.6.0'
     kapt "androidx.room:room-compiler:2.5.2"
 
     // Kotlin Extensions and Coroutines support for Room
@@ -97,19 +133,51 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
     implementation 'com.github.bumptech.glide:compose:1.0.0-alpha.1'
 
-
     //Dagger - Hilt
-    implementation 'com.google.dagger:hilt-android:2.47'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    kapt 'com.google.dagger:hilt-android-compiler:2.47'
+    implementation 'com.google.dagger:hilt-android:2.45'
+    androidTestImplementation project(path: ':app')
+    kapt 'com.google.dagger:hilt-android-compiler:2.45'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
+    // Local unit tests
+    testImplementation "androidx.test:core:1.5.0"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.robolectric:robolectric:4.10.3"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
+    testImplementation "com.google.dagger:hilt-android-testing:2.45"
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.45'
+    testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.45'
+    testImplementation 'org.mockito:mockito-android:5.4.0'
+    testImplementation 'org.mockito:mockito-core:5.4.0'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.0.0'
+    testImplementation "org.jetbrains.kotlin:kotlin-test:1.8.0"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.8.0"
+    testImplementation 'androidx.test:runner:1.5.2'
 
-    testImplementation 'junit:junit:4.13.2'
+
+    // Instrumentation tests
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.06.01')
+    debugImplementation 'com.google.dagger:hilt-android-testing:2.45'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.45'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.45'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.5"
+    androidTestImplementation "junit:junit:4.13.2"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+    //noinspection GradleDependency
+    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
+    androidTestImplementation 'io.mockk:mockk-android:1.13.5'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.06.01')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+
+    debugImplementation "androidx.test:core:1.5.0"
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
